--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-   
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <meta http-equiv="Content-Security-Policy" 
-        content="default-src 'self'; 
+        content="default-src 'self';
                  connect-src 'self' https://localhost:7162 ws: wss:;
                  script-src 'self' 'unsafe-eval' 'unsafe-inline';
-                 style-src 'self' 'unsafe-inline' https:;
+                 style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+                 font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
                  img-src 'self' data: https:;">
 </head>
 <body>
