--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>AGC</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32 64x64 128x128" href="Logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <meta http-equiv="Content-Security-Policy" 
         content="default-src 'self';
