--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
             default-src 'self';
             connect-src 'self' https://localhost:7162 https://azbgulfcompany.runasp.net https://*.runasp.net https://api.azbgulf.com ws: wss:;
             script-src 'self' 'unsafe-inline' 'unsafe-eval';
-            style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-            font-src 'self' https://fonts.gstatic.com;
+            style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://r2cdn.perplexity.ai;
+            font-src 'self' https://fonts.gstatic.com https://r2cdn.perplexity.ai;
             img-src 'self' data: https:;
           ">
 </head>
